Edited about page, fixed word-break on program links

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,7 +22,7 @@
 }
 
 .program a {
-    word-break: break-all;
+    word-break: break-word;
 }
 
 #programs {
